Change font in main.css

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Playfair Display', serif;
   line-height: 1.5;
   /* include your font family and default line-height */
 }
