--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ header nav ul li a:focus {
 }
 
 h2 {
-  margin: .5rem 0 0 1.5rem;
+  margin-bottom: 0;
   padding: 0;
   font-size: 2rem;
 }
@@ -70,6 +70,11 @@ p data {
   font-size: 1.5rem;
 }
 
+.details {
+  margin: 1.5rem;
+  padding: 0;
+}
+
 .button {
   border-radius: 0;
   background-color: #224229;
@@ -77,7 +82,6 @@ p data {
   text-decoration: none;
   font-weight: bold;
   padding: 1em;
-  margin: 1.5rem;
 }
 
 .button:hover {
@@ -88,22 +92,6 @@ p data {
 h4 {
   font-size: 1.25rem;
   padding: 0;
-}
-
-.money-tree p {
-  margin: 1.5rem;
-}
-
-.money-tree h4 {
-  margin: 1.5rem;
-}
-
-.money-tree dl {
-  margin: 0 1.5rem;
-}
-
-.money-tree ul {
-  margin: 0 1.5rem 1.5rem 1.5rem;
 }
 
 .product {
@@ -134,7 +122,7 @@ dl dt {
   padding: 4rem;
 }
 
-.browsed {
+.browsed-images {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -142,12 +130,12 @@ dl dt {
   margin: 1.5rem;
 }
 
-.browsed p {
+.browsed-images p {
   margin: 0;
   padding: 0;
 }
 
-section h3 {
+.browsed h3 {
   margin: 1.5rem;
 }
 
@@ -200,7 +188,7 @@ h2 {
   grid-column: 3;
 }
 
-.browsed {
+.browsed-images {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
